--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -30,7 +30,19 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
                 app:title="@string/store_list_title"
-                app:titleTextColor="@color/white" />
+                app:titleTextColor="@color/white">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_favorite"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="@string/favorite"
+                    app:rippleColor="@android:color/white"
+                    android:textColor="@android:color/white" />
+
+            </com.google.android.material.appbar.MaterialToolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
 
