--- a/app/src/main/res/layout/activity_add_store.xml
+++ b/app/src/main/res/layout/activity_add_store.xml
@@ -183,6 +183,38 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageView
+                    android:id="@+id/image_view_business_permit"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="@dimen/margin_padding_size_medium"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_description" />
+
+                <Button
+                    android:id="@+id/button_view_permit"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="View Permit"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toEndOf="@id/image_view_business_permit"
+                    app:layout_constraintTop_toTopOf="@id/image_view_business_permit"
+                    app:layout_constraintBottom_toBottomOf="@id/image_view_business_permit"
+                    android:layout_marginStart="@dimen/margin_padding_size_medium"/>
+
+                <Button
+                    android:id="@+id/button_upload_business_permit"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Business Permit"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_description"
+                    android:layout_marginTop="@dimen/margin_padding_size_medium"/>
+
+                <ImageView
                     android:id="@+id/image_view_store"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -190,7 +222,7 @@
                     android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_description" />
+                    app:layout_constraintTop_toBottomOf="@+id/image_view_business_permit" />
 
                 <ProgressBar
                     android:id="@+id/image_upload_progress_bar"
