--- a/app/src/main/res/layout/item_group_chat_sent.xml
+++ b/app/src/main/res/layout/item_group_chat_sent.xml
@@ -71,6 +71,15 @@
                 android:textColor="@android:color/white"
                 android:text="@{chatMessage.text}"/>
 
+            <TextView
+                android:id="@+id/text_view_seen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seen"
+                android:textSize="12sp"
+                android:visibility="gone"
+                android:layout_gravity="end" />
+
         </LinearLayout>
 
     </RelativeLayout>
